src/ui/snapshots/rusty_riff__ui__draw__tests__add_pedal_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  AMP ──▶ CAB                                                                              ──▶ MASTER +0.0 ──▶ OUTPUT IN uncal▐░░░░░▌          OUT ▐░░░░░▌LIM           │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MARSHALL PLEXI ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MARSH GB ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ···                 ··◇                ◇··        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                ◇ ·                 · ◇                ◇ ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃     VOL II 7.5          VOL I 0.0           BASS 10.0           MID 0.0           TREBLE 6.5        PRESENCE 4.0    ┃┃     MIC 4.0        BLEND 0.0        ROOM 0.0    ┃
┃                                                                                                                     ┃┃                                                 ┃
┃                                                                                                                     ┃┃                                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ + ADD ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
││                                                                                  ＋                                                                                   ││
│└─────────────────────────────────────────────╔ A D D   P E D A L ═══════════════════════════════════════════════════════╗─────────────────────────────────────────────┘│
││├────────────────────────────────────────────║▶ NOISE GATE                                                              ║────────────────────────────────────────────┤││
││SELECT A PEDAL — ←→                          ║  WHAMMY                                                                  ║                                             ││
││                                             ║  WAH                                                                     ║                                             ││
││                                             ║  COMP                                                                    ║                                             ││
││                                             ║  FUZZ                                                                    ║                                             ││
││                                             ║  TS-808                                                                  ║                                             ││
││                                             ║  DS-1                                                                    ║                                             ││
│└─────────────────────────────────────────────║  ML-2 METAL CORE                                                         ║─────────────────────────────────────────────┘│
└──────────────────────────────────────────────║  PRE-AMP EQ                                                              ║──────────────────────────────────────────────┘
                                               ║  UNI-VIBE                                                                ║                                               
                                               ║  CLEAN BOOST                                                             ║                                               
                                               ║  GRAPHIC EQ                                                              ║                                               
                                               ║  PARAMETRIC EQ                                                           ║                                               
                                               ║  FLANGER                                                                 ║                                               
                                               ║  CHORUS                                                                  ║                                               
                                               ║  PHASER                                                                  ║                                               
                                               ║  TREMOLO / VIBRATO                                                       ║                                               
                                               ║  DELAY                                                                   ║                                               
                                               ║  SPRING REVERB                                                           ║                                               
                                               ║                                                                          ║                                               
                                               ║                    ↑/↓ navigate  Enter add  Esc close                    ║                                               
                                               ╚══════════════════════════════════════════════════════════════════════════╝
