src/ui/snapshots/rusty_riff__ui__draw__tests__amp_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  AMP ──▶ CAB ──▶ OUTPUT                                                                                              IN uncal▐░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MARSHALL PLEXI ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MARSH GB ├┓
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ···                 ··◇                ◇··        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                ◇ ·                 · ◇                ◇ ·                 · ·                · ·        ┃┃       · ·             ◇ ·              ◇ ·      ┃
┃     VOL II 7.5          VOL I 0.0           BASS 10.0           MID 0.0           TREBLE 6.5        PRESENCE 4.0    ┃┃     MIC 4.0        BLEND 0.0        ROOM 0.0    ┃
┃                                                                                                                     ┃┃                                                 ┃
┃                                                                                                                     ┃┃                                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌ + ADD ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│
││                                                                                  ＋                                                                                   ││
│└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│
││├────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤││
││SELECT A PEDAL — ←→                                                                                                                                                   ││
││                                                             Press 4 for the pedalboard, 1 for the chain.                                                             ││
││                                                                                                                                                                      ││
││                                             ╔ S E L E C T   A M P ═════════════════════════════════════════════════════╗                                             ││
││                                             ║  Marshall JCM800                                                         ║                                             ││
││                                             ║  Mesa Dual Rectifier                                                     ║                                             ││
│└─────────────────────────────────────────────║  Randall Warhead                                                         ║─────────────────────────────────────────────┘│
└──────────────────────────────────────────────║  Vox AC30                                                                ║──────────────────────────────────────────────┘
                                               ║  Hiwatt DR103                                                            ║                                               
                                               ║▶ Marshall Plexi                                                          ║                                               
                                               ║  Fender Twin Reverb                                                      ║                                               
                                               ║  Supro Combo                                                             ║                                               
                                               ║  Tweed Deluxe                                                            ║                                               
                                               ║                                                                          ║                                               
                                               ║                   ↑/↓ navigate  Enter select  Esc close                  ║                                               
                                               ╚══════════════════════════════════════════════════════════════════════════╝
