src/ui/snapshots/rusty_riff__ui__draw__tests__help_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌─────────────────────────────────────╔ K E Y B I N D I N G S ════════════════════════════════════════════════════════════════════╗──────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶║Panels & chain                                                                             ║░░▌          OUT ▐░░░░░░░░░▌          │
└─────────────────────────────────────║  1 / 2 / 3 / 4  focus chain, amp, timeline, pedals (again: hide)                          ║──────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━║  Tab / Shift-Tab  cycle amp/cab (2) or pedals (4) in the panel                            ║━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃                                     ║  ←/→  move inside the focused panel                                                       ║                                      ┃
┃         ···                ···      ║  [ / ]  move the ribbon's stage earlier / later                                           ║            ···              ···      ┃
┃        · ● ◇              · ● ·     ║  note  between AMP and CAB = line-level; a full-rig AU is post-mic                        ║           · ● ·            · ● ·     ┃
┃         · ·                · ◇      ║  Space  bypass stage, pedal, or transport under focus                                     ║            ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0   ║Play & edit                                                                                ║0        BLEND 0.0        ROOM 0.0    ┃
┃                                     ║  ↑/↓  +/−  knob / adjust value                                                            ║                                      ┃
┃                                     ║  D  remove pedal from the board                                                           ║                                      ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║  A  amp model browser                                                                     ║▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║  C  cabinet model browser                                                                 ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────────║  I / X  IR browser / IR bypass                                                            ║──────────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────────║  O  change audio devices                                                                  ║ADD ─────────────────────────────────┐│
││                2.0  3.0            ║  W  studio-master width: neutral / wide                                                   ║                ＋                    ││
│└────────────────────────────────────║  ;  tap tempo: set the delay time by tapping                                              ║─────────────────────────────────────┘│
││├───────────────────────────────────║  Z / U  amp-plugin bypass / browser                                                       ║────────────────────────────────────┤││
││SELECT A PEDAL — ←→                 ║Tools                                                                                      ║                                     ││
││                                    ║  P  preset browser (rig snapshot)                                                         ║                                     ││
││                                    ║  S  save current rig as preset                                                            ║                                     ││
││                                    ║  J  session browser: new / save / save as / load                                          ║                                     ││
││                                    ║  T  chromatic tuner                                                                       ║                                     ││
││                                    ║  M  practice metronome (+/− tempo, Space on/off)                                          ║                                     ││
│└────────────────────────────────────║  N  calibrate input level                                                                 ║─────────────────────────────────────┘│
└─────────────────────────────────────║  V  plugin browser                                                                        ║──────────────────────────────────────┘
                                      ║  R  arm / stop a dry raw take (auto-plays; lands on the timeline)                         ║                                       
                                      ║Looper (monitor only)                                                                      ║                                       
                                      ║  Y  record / pause / resume the loop                                                      ║                                       
                                      ║  F  clear the loop                                                                        ║                                       
                                      ║  , / .  toggle overdub / undo the last overdub layer                                      ║                                       
                                      ║  Q / Ctrl-C  quit                                                                         ║                                       
                                      ║Panels                                                                                     ║                                       
                                      ║  B  import a track at the playhead (MP3 / WAV / FLAC)                                     ║                                       
                                      ║Preset browser                                                                             ║                                       
                                      ║  type  filter by name / description (Backspace; Esc clears)                               ║                                       
                                      ║  ↑/↓  Enter  navigate / apply (audio uninterrupted)                                       ║                                       
                                      ║  S / E / I  save / export / import                                                        ║                                       
                                      ║  F  favorite the selected preset                                                          ║                                       
                                      ║  X  A/B: swap the last two applied presets                                                ║                                       
                                      ║  D  delete (user presets only)                                                            ║                                       
                                      ║Timeline (focused)                                                                         ║                                       
                                      ║  Space  play / pause (any row)                                                            ║                                       
                                      ║  M  mute the selected track                                                               ║                                       
                                      ║  Enter  jump to start (loop in-point if looped)                                           ║                                       
                                      ║  ↑/↓  ←/→  select row / seek by the step                                                  ║                                       
                                      ║  +/−  step (seek & clip move): 0.5 / 1 / 5 / 10 / 30 s                                    ║                                       
                                      ║  Tab  row height: full / 50-50 / normal                                                   ║                                       
                                      ║  Ctrl+↑/↓  zoom the time axis around the playhead                                         ║                                       
                                      ║  G  selected track gain                                                                   ║                                       
                                      ║  H  move selected clip (arrows by step; +/− changes it)                                   ║                                       
                                      ║  E  export unmuted raw takes (WAV)                                                        ║                                       
                                      ║  [ / ]  L  loop in-point / out-point, toggle loop                                         ║                                       
                                      ║                                       Esc / K close                                       ║                                       
                                      ╚═══════════════════════════════════════════════════════════════════════════════════════════╝
